2004-10-07  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* src/Makefile.am:
	* src/test-man-parser.c:
	* src/test-pager.c:
	* src/test-uri.c:
	* src/yelp-base.c:
	* src/yelp-base.h:
	* src/yelp-db-pager.c:
	* src/yelp-db-pager.h:
	* src/yelp-error.h:
	* src/yelp-history.c:
	* src/yelp-history.h:
	* src/yelp-html-gecko.c:
	* src/yelp-html.h:
	* src/yelp-man-pager.c:
	* src/yelp-man-pager.h:
	* src/yelp-man-parser.c:
	* src/yelp-man-parser.h:
	* src/yelp-pager.c:
	* src/yelp-pager.h:
	* src/yelp-toc-pager.c:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	* src/yelp-window.c:
	* src/yelp-window.h:
	- Switched most of the stuff over to YelpDocInfo
	- Reworked parser semantics to make it simpler
	- Broke lots of stuff

2004-09-30  James Bowes  <bowes@cs.dal.ca>

	* src/yelp-man-parser.c: (parser_handle_linetag),
	(parser_handle_inline), (parser_append_text), (parser_append_node),
	(parser_stack_push_node), (parser_stack_pop_node),
	(parser_handle_table_options), (parser_handle_row_options),
	(parser_parse_table): Added more tags (from the gnu man macro 
	package) to the parser. Added basic parsing for the table (tbl) 
	macro package. Stopped parser from adding <P>'s holding only 
	newlines.

2004-09-30  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-theme.c:
	* src/yelp-theme.h:
	* src/yelp-window.c:
	- Hooked up notifications for theme changes
	- Hooked up the window icon to use said notifications

2004-09-29  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/test-man-parser.c:
	* src/test-uri.c:
	* src/yelp-man-parser.c:
	* src/yelp-man-parser.h:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	- Added yelp_document_info_get_filename
	- Made yelp-man-parser use YelpDocument

2004-09-29  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-man-parser.c:
	- DIE STRCMP DIE

2004-09-29  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/test-uri.c:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	- Removed the yelp-uri dependancy from yelp-utils