@@ -1,5 +1,10 @@
 2004-10-07  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-utils.c:
+	- Using the toc.xml file as the base URI for x-yelp-toc, to please Gecko
+
+2004-10-07  Shaun McCance  <shaunm@gnome.org>
+
 	* configure.in:
 	* src/Makefile.am:
 	* src/test-man-parser.c:
